--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=poker-chips;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost;Database=poker-chips;User ID=sa;Password=pkrchps@3;TrustServerCertificate=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
